--- a/app/index.html
+++ b/app/index.html
@@ -6,11 +6,13 @@
     <title>ArchiveWeb</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="{{rootURL}}assets/images/archive-icon.png">
 
     {{content-for "head"}}
 
     <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link rel="stylesheet" href="{{rootURL}}assets/archive-web.css">
+    <link rel="stylesheet" href="{{rootURL}}assets/css/archive-web.css">
 
     {{content-for "head-footer"}}
   </head>
