--- a/app/index.html
+++ b/app/index.html
@@ -11,8 +11,8 @@
     {{content-for "head"}}
 
     <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link rel="stylesheet" href="{{rootURL}}assets/archive-web.css">
-    <link rel="stylesheet" href="{{rootURL}}assets/css/archive-web.css">
+    <link rel="stylesheet" href="{{rootURL}}assets/archive.css">
+    <link rel="stylesheet" href="{{rootURL}}assets/css/archive.css">
 
     {{content-for "head-footer"}}
   </head>
