--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
     {{content-for "body"}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/archive-web.js"></script>
+    <script src="{{rootURL}}assets/archive.js"></script>
 
     {{content-for "body-footer"}}
   </body>
